Fixing extra padding

--- a/src/styles/custom.less
+++ b/src/styles/custom.less
@@ -1,7 +1,10 @@
 @primary: #32273B;
 @secondary: #DDDDDD;
 @highlight: #CC0000;
-
+/** OVERRIDES **/
+main .page-section:first-child {
+  padding-top: 0 !important;
+}
 /** GLOBAL **/
 input, select, textarea {
   font-size: 1rem !important;
